--- a/css/styles.css
+++ b/css/styles.css
@@ -4055,6 +4055,7 @@ textarea.form-control-lg {
   font-size: 1.25rem;
   text-decoration: none;
   white-space: nowrap;
+  font-weight: 700;
 }
 .navbar-nav {
   display: flex;
@@ -4906,10 +4907,10 @@ textarea.form-control-lg {
 
 .alert {
   position: relative;
-  padding: 1rem 1rem;
+  padding: 3px;
   margin-bottom: 1rem;
   border: 1px solid transparent;
-  border-radius: 0.25rem;
+  border-radius: 1rem;
 }
 
 .alert-heading {
